# neumanOpt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
data/certified/: certified_coeffs_radix15.json  certified_coeffs_radix24.json
data/results/: qrho_radii.csv  reproducibility_manifest.txt
docs/: index.md  install.md  myst.yml  paper.md  poster.md  requirements.txt
docs/_static/poster/: index.html  paper.txt  print.html  svg-gallery.html
docs/tutorials/: 01_first_steps.ipynb  02_certified_kernels.ipynb  03_cost_model_and_benefit_plot.ipynb
notebooks/: 01_first_steps.ipynb  02_certified_kernels.ipynb  03_cost_model_and_benefit_plot.ipynb
scripts/: compute_qrho.py  plot_benefit.py  reproduce_all.py
src/neumann_kernels/: __init__.py  bounds.py  circuit_ansatz.py  cost_model.py  exact_kernels.py  io.py  optimize.py  polynomial_maps.py  residual_iteration.py
tests/: test_bounds.py  test_cost_model.py
